Removed unnecessary tests and unused exception.